src/snapshots/nixfmt_rs__ir_format_tests__arithmetic_operators.snap
---
source: src/ir_format_tests.rs
description: a - b * c / d
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1ma[0m[0;97;1m"[0m
    [0;96;1m,[0m Spacing Space
    [0;96;1m,[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m-[0m[0;97;1m"[0m
    [0;96;1m,[0m Group RegularG
        [0;93;1m[[0m Spacing Space
        [0;93;1m,[0m Group RegularG
            [0;35m[[0m Group RegularG
                [0;36m[[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mb[0m[0;97;1m"[0m
                [0;36m,[0m Spacing Space
                [0;36m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m*[0m[0;97;1m"[0m
                [0;36m,[0m Spacing Hardspace
                [0;36m,[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1mc[0m[0;97;1m"[0m
                [0;36m][0m
            [0;35m,[0m Spacing Space
            [0;35m,[0m Text [0;92;1m1[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m/[0m[0;97;1m"[0m
            [0;35m,[0m Spacing Hardspace
            [0;35m,[0m Text [0;92;1m2[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1md[0m[0;97;1m"[0m
            [0;35m][0m
        [0;93;1m][0m
    [0;96;1m][0m
[0;95;1m][0m
