src/snapshots/nixfmt_rs__ir_format_tests__boolean_not_structure.snap
---
source: src/ir_format_tests.rs
description: "!true"
---
[0;95;1m[[0m Group RegularG
    [0;96;1m[[0m Text [0;92;1m0[0m [0;92;1m0[0m RegularT [0;97;1m"[0m[0;94;1m!true[0m[0;97;1m"[0m [0;96;1m][0m
[0;95;1m][0m
